<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/usd_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/usd_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/wallet_balance_usd_title"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/usd_balance_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="0"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <EditText
                android:id="@+id/usd_to_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text=""
                android:textSize="18sp"/>
            <Button
                android:id="@+id/usd_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance_btc_add"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btc_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:id="@+id/btc_balance_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/wallet_balance_btc_title"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/btc_balance_value"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="0"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <EditText
                android:id="@+id/btc_to_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text=""
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btc_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance_btc_add"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>